manual testing of ward complete
