# controllers/ward.controller.js
@@ -4,35 +4,7 @@ const contentText = 'text/plain';
 const contentJson = 'application/json';
 const {getNewWardId} = require('../models/ward');
 const { getUserPrivs } = require('../models/user');
-
-
-const add_one = async (req, res) => {
-  try {
-    const userPrivs = getUserPrivs(req);
-    if (
-      (userPrivs.regionAdmin && req.body.wardId == userPrivs.wardId) ||
-      process.env.ENV_DEV) {
-      const { id } = req.params;
-      const ward = Ward(req.body);
-      ward.wardId= await getNewWardId();
-      console.log(ward.wardId);
-      
-      await Ward
-        .save()
-        .then((data) => res.status(201).json(data))
-        .catch((error) => res.status(404).json({ error }));
-
-      return;
-    } else {
-      setHeaders(res, contentText);
-      res.status(403).send("Incorrect permissions.");
-    }
-
-  } catch (error) {
-    //500 server error
-    res.status(500).json({ message: error.message });
-  }
-};
+const { setHeaders } = require('./index');
 
 
 
@@ -51,12 +23,12 @@ const getall = async (req, res) => {
 };
 
 
-
-const getallbyregion = async (req, res) => {
+const getAllByStake = async (req, res) => {
   try {
     const { id } = req.params;
+    console.log(id);
     await Ward
-      .find({'wardId': id})
+      .find({'stakeId': id})
       .then((data) => res.status(200).json(data))
       .catch((error) => res.status(404).json({ message: "Ward not found" }));
     return;
@@ -85,19 +57,23 @@ const getSingle = async (req, res) => {
   }
 };
 
-
-
-const delete_one = async (req, res) => {
+const add_one = async (req, res) => {
   try {
-    const userPrivs = getUserPrivs(req);
+    const userPrivs = await getUserPrivs(req);
+    console.log(userPrivs);
+    console.log(req.body);
     if (
-      (userPrivs.regionAdmin && req.body.wardId == userPrivs.wardId) ||
+      (userPrivs.regionAdmin && req.body.regionId == userPrivs.regionId) ||
       process.env.ENV_DEV) {
       const { id } = req.params;
-      await Ward
-      .remove({ 'wardId': id })
-      .then((data) => res.status(200).json(data))
-      .catch((error) => res.status(404).json({ message: "Ward not deleted" }));
+      const ward = Ward(req.body);
+      ward.wardId= await getNewWardId();
+      console.log(ward.wardId);
+      
+      await ward
+        .save()
+        .then((data) => res.status(201).json(data))
+        .catch((error) => res.status(404).json({ error }));
 
       return;
     } else {
@@ -111,15 +87,11 @@ const delete_one = async (req, res) => {
   }
 };
 
-
-
-
-
 const update_one = async (req, res) => {
   try {
-    const userPrivs = getUserPrivs(req);
+    const userPrivs = await getUserPrivs(req);
     if (
-      (userPrivs.regionAdmin && req.body.wardId == userPrivs.wardId) ||
+      (userPrivs.regionAdmin && req.body.regionId == userPrivs.regionId) ||
       process.env.ENV_DEV) {
       const { id } = req.params;
       const updatedWard = req.body;
@@ -142,6 +114,52 @@ const update_one = async (req, res) => {
   }
 };
 
-module.exports = { add_one, getall, getSingle, delete_one, update_one, getallbyregion }
+const delete_one = async (req, res) => {
+  try {
+    const userPrivs = await getUserPrivs(req);
+    if (
+      (userPrivs.regionAdmin && req.body.regionId == userPrivs.regionId) ||
+      process.env.ENV_DEV) {
+      const { id } = req.params;
+      let result = {};
+            
+      try {
+          //get user data from model
+          result = await Ward.deleteOne({ 'wardId': id , 'regionId': req.body.regionId});
+          console.log(result);
+      } catch (error) {
+          setHeaders(res, contentText);
+          res.status(422).send(`Bad data. ${error}`);
+          return;
+      }
+      // if deletedCount is 0 set the status code to 404
+      let statusCode = 0;
+      if (result.deletedCount == 0) {
+          statusCode = 404
+      } else {
+          statusCode = 200
+      }
+      setHeaders(res, contentText);
+      res.status(statusCode).send(result);
+
+
+
+    } else {
+      setHeaders(res, contentText);
+      res.status(403).send("Incorrect permissions.");
+    }
+
+  } catch (error) {
+    //500 server error
+    res.status(500).json({ message: error.message });
+  }
+};
+
+
+
+
+
+
+module.exports = { getall, getSingle, add_one, update_one, delete_one, getAllByStake }
 
 
