# routes/ward.js
@@ -5,16 +5,6 @@ const ctrWard = require("../controllers/ward.controller");
 const router = express.Router();
 
 
-
-
-router.post("/ward", (req, res) =>  {
-// #swagger.summary = 'Add a stake'
-    // #swagger.description = ''
-    /* #swagger.responses[201] = {description: 'OK'}}}*/
-     /*#swagger.parameters['obj'] = 
-     {in:'body',description: 'Add a stake', schema: { $ref:'#/definitions/ward'}} */
-    ctrWard.add_one(req, res)})
-
 router.get("/ward", (req, res) =>  {
  // #swagger.summary = 'This is where you will find ward information. '
     // #swagger.description = ''
@@ -25,15 +15,15 @@ router.get("/ward", (req, res) =>  {
     */
     ctrWard.getall(req, res)})
 
-    router.get("/wards/region/:id",(req, res) =>  {
-    // #swagger.summary = 'This is where you will find Stake information. '
-       // #swagger.description = ''
-       /* #swagger.responses[200] = {
-           description: '',
-           schema: [{ $ref: '#/definitions/ward'}]
-       }
-       */
-       ctrWard.getallbyregion(req, res)})
+router.get("/wards/stake/:id",(req, res) =>  {
+// #swagger.summary = 'This is where you will find ward information. '
+    // #swagger.description = ''
+    /* #swagger.responses[200] = {
+        description: '',
+        schema: [{ $ref: '#/definitions/ward'}]
+    }
+    */
+    ctrWard.getAllByStake(req, res)})
 
 router.get("/ward/:id", (req, res) =>  {
 // #swagger.summary = 'This is where you will find ward information. '
@@ -46,6 +36,23 @@ router.get("/ward/:id", (req, res) =>  {
 */
 ctrWard.getSingle(req, res)})
 
+router.post("/ward", (req, res) =>  {
+    // #swagger.summary = 'Add a ward'
+        // #swagger.description = ''
+        /* #swagger.responses[201] = {description: 'OK'}}}*/
+         /*#swagger.parameters['obj'] = 
+         {in:'body',description: 'Add a stake', schema: { $ref:'#/definitions/ward'}} */
+        ctrWard.add_one(req, res)})
+    
+router.put("/ward/:id",(req, res) =>  {
+    // #swagger.summary = 'Modify a ward'
+    // #swagger.description = ''
+    // #swagger.parameters['id'] = { description: 'ward id' }
+    /* #swagger.responses[204] = {description: 'OK'}}}*/
+        /*#swagger.parameters['obj'] = 
+        {in:'body',description: 'Modify a ward', schema: { $ref:'#/definitions/ward'}} */
+        ctrWard.update_one(req, res)})
+            
 router.delete("/ward/:id", (req, res) =>  {
 // #swagger.summary = 'This is where you will find ward information. '
 // #swagger.description = ''
@@ -56,13 +63,5 @@ router.delete("/ward/:id", (req, res) =>  {
 */
 ctrWard.delete_one(req, res)})
 
-router.put("/ward/:id",(req, res) =>  {
-// #swagger.summary = 'Modify a ward'
-// #swagger.description = ''
-// #swagger.parameters['id'] = { description: 'ward id' }
-/* #swagger.responses[204] = {description: 'OK'}}}*/
- /*#swagger.parameters['obj'] = 
- {in:'body',description: 'Modify a ward', schema: { $ref:'#/definitions/ward'}} */
- ctrWard.update_one(req, res)})
 
 module.exports = router;
